Change too many things at once.

--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -9,6 +9,7 @@ Here's an incomplete list, in no particular order:
 - [[https://github.com/hrs/dotfiles][Harry Schwartz]]. I've taken lots of stuff from him.
 - [[https://so.nwalsh.com/2020/02/29/dot-emacs][Norman Walsh]]. I stole most of the startup tricks, tangling the files and many
   other things directly from him.
+- [[https://robert.kra.hn/posts/2021-02-07_rust-with-emacs/][Robert Krahn]]. Rust specific setup.
 
 I assume that =use-package= and =general= are always available and sprinkle their
 incantations generously throughout the configuration.
@@ -133,7 +134,6 @@ Example:
 All kinds of Emacs things that just don't sit right with me.
 
 ** Theme
-
 #+begin_src emacs-lisp
 (defun hgf/edit-weatherwax ()
   "Edit the Weatherwax theme."
@@ -202,7 +202,7 @@ On the rare occasions when something changes outside of Emacs, I'd
 like Emacs to revert the buffer to the state on disk.
 
 #+begin_src emacs-lisp
-(global-auto-revert-mode 1)
+(global-auto-revert-mode +1)
 #+end_src
 
 ** Show parens
@@ -381,6 +381,13 @@ And now for something completely different
 (general-def "M-p" 'scroll-down-command)
 #+end_src
 
+* Building up a stdlib
+
+#+begin_src emacs-lisp
+(use-package s)
+(use-package dash)
+#+end_src
+
 * Theme
 #+begin_src emacs-lisp
 (use-package gruvbox-theme)
@@ -391,14 +398,17 @@ And now for something completely different
 Vimmy keys and feel, for us vimfolk.
 
 #+begin_src emacs-lisp
+(use-package undo-tree)
 (use-package evil
   :init
   (setq evil-want-integration t
 	evil-want-keybinding nil
 	evil-want-abbrev-expand-on-insert-exit nil
-	evil-want-Y-yank-to-eol t)
+	evil-want-Y-yank-to-eol t
+	evil-undo-system 'undo-tree)
   :config
   (evil-mode 1)
+  (global-undo-tree-mode +1)
   (setq evil-emacs-state-cursor 'bar
 	evil-search-module 'evil-search
 	evil-ex-search-case 'smart)
@@ -407,7 +417,6 @@ Vimmy keys and feel, for us vimfolk.
     "k" 'evil-previous-visual-line
     "L" 'evil-end-of-line
     "H" 'evil-first-non-blank-of-visual-line
-    "?" 'swiper
     "g E" 'eval-buffer
     "g e" 'eval-last-sexp
     "g C-e" 'eval-defun
@@ -480,80 +489,19 @@ On second thought, I rather liked using C-m as Return.
 (general-unbind evil-motion-state-map "TAB")
 #+end_src
 
-* Completion
-There are a few different kinds of completion. Ivy takes care of most
-Emacs commands and Company deals with completion within a buffer.
 
-** Ivy
-I've been using Ivy for almost as long as I've been using Emacs and
-haven't really tried anything else. Never had a need to do so.
-
+* Selectrum
 #+begin_src emacs-lisp
-(use-package ivy
-  :after counsel
-  :config
-  (ivy-mode 1)
-  (setq ivy-use-virtual-buffers t
-	enable-recursive-minibuffers t
-	ivy-initial-inputs-alist nil
-	count-format "(%d/%d) "))
+(use-package selectrum
+  :init
+  (selectrum-mode +1)
+  :custom 
+  (completion-styles '(flex substring partial-completion)))
 #+end_src
 
-Ivy-rich also shows the documentation and keybinding for respective
-commands in Ivy windows, if applicable. Very nifty.
-
-#+begin_src emacs-lisp
-(use-package ivy-rich
-  :after ivy
-  :config
-  (ivy-rich-mode 1))
-#+end_src
-
-Counsel swaps out many common Emacs commands with their Ivy-nized
-versions.
-
-#+begin_src emacs-lisp
-(use-package counsel
-  :config
-  (counsel-mode 1)
-  (use-package flx)
-  (use-package smex)
-  (general-def "C-s" 'swiper))
-#+end_src
-
-*** ivy-bibtex
-
-#+begin_src emacs-lisp
-(use-package ivy-bibtex
-  :general
-  (LaTeX-mode-map "C-x [" 'ivy-bibtex)
-  :config
-  (setq ivy-re-builders-alist
-	'((ivy-bibtex . ivy--regex-ignore-order)
-	  (t . ivy--regex-plus)))
-  (setq ivy-bibtex-default-action 'ivy-bibtex-insert-citation)
-  (setq bibtex-completion-cite-default-command "autocite"
-	bibtex-completion-cite-prompt-for-optional-arguments nil
-	bibtex-completion-pdf-field "file")
-  (setq bibtex-completion-pdf-open-function
-	(lambda (fpath)
-	  (call-process "zathura" nil 0 nil fpath))))
-#+end_src
-
-** Company
-The de facto standard text completion framework for Emacs.
-
-#+begin_src emacs-lisp
-(use-package company
-  :general
-  ('insert company-mode-map
-	   "C-x C-o" 'company-complete
-	   "C-x C-f" 'company-files)
-  :config (company-mode))
-#+end_src
 
 * Compile
-I mostly use compilation with latex, surprisingly enough.
+I mostly use compilation with Latex, surprisingly enough.
 
 #+begin_src emacs-lisp
 (defun hgf/-close-compilation-if-successful (buf str)
@@ -571,17 +519,53 @@ I mostly use compilation with latex, surprisingly enough.
 	  'hgf/-close-compilation-if-successful)
 #+end_src
 
-* org-mode
-org-mode is amazing and I use it all the time. And once again, a large majority of
+* Org
+Org is amazing and I use it all the time. And once again, a large majority of
 this section is inspired by Harry Schwartz, John Wiegley and others.
+
+** Base
 
 #+begin_src emacs-lisp
 (use-package org
   :mode ("\\.org\\'" . org-mode)
   :config
-  (setq org-use-property-inheritance t)
-  (add-to-list 'org-structure-template-alist
-	       '("el" . "src emacs-lisp"))
+  (setq org-use-property-inheritance t
+	org-startup-folded t
+	org-adapt-indentation nil
+	org-hide-leading-stars t
+	org-cycle-separator-lines 0
+	org-hide-emphasis-markers t
+	org-fontify-done-headline nil
+	org-M-RET-may-split-line nil
+	org-outline-path-complete-in-steps nil
+	org-refile-use-outline-path 'file
+	org-refile-targets '((org-agenda-files . (:maxlevel . 2)))
+	org-archive-location (hgf/org-path "archive.org::* %s")
+	org-todo-keywords '((sequence "TODO" "WAITING" "|" "DONE" "SOMEDAY"))
+	org-log-done-with-time nil
+	org-log-done 'note
+	;; Does this variable even exist?
+	;; org-clock-into-drawer nil
+	;; Agenda
+	org-default-notes-files "~/cloud/org/notes.org"
+	org-agenda-files '("~/cloud/org/")
+	org-agenda-window-setup 'current-window
+	org-agenda-time-grid nil
+	org-agenda-skip-deadline-if-done t
+	org-agenda-skip-scheduled-if-done t
+	org-agenda-skip-timestamp-if-done t
+	org-agenda-start-on-weekday nil
+	org-reverse-note-order t
+	org-fast-tag-selection-single-key t
+	;; Babel
+	org-src-fontify-natively t
+	org-src-preserve-indentation nil
+	org-src-tab-acts-natively t
+	org-edit-src-content-indentation 0
+	org-src-window-setup 'current-window
+	)
+  
+  (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
   (general-add-advice 'org-capture :after '(lambda () (evil-append 0)))
   (general-def 'normal org-mode-map
     "g t" 'org-todo
@@ -593,20 +577,11 @@ this section is inspired by Harry Schwartz, John Wiegley and others.
 	(call-interactively 'org-store-link)
       (error nil))
     (org-capture nil "i"))
-  (setq org-todo-keywords
-	'((sequence "TODO" "|" "DONE")
-	  (type "PROJECT" "WAITING" "|" "SOMEDAY" "CANCELLED")))
-  (setq org-log-done-with-time nil
-	org-log-done 'time)
+  
   (defun org-agenda-today ()
     (interactive)
     (org-agenda-list nil nil 7))
 
-  (require 'org-agenda)
-  (setq org-agenda-files '("~/cloud/org/")
-	org-default-notes-files "~/cloud/org/notes.org"
-	org-agenda-window-setup 'current-window
-	org-agenda-time-grid nil)
   (setq org-priority-faces
 	'((?A . (:weight 'normal))
 	  (?B . (:weight 'normal))
@@ -616,54 +591,17 @@ this section is inspired by Harry Schwartz, John Wiegley and others.
 	   "* %u %?")
 	  ("i" "Inbox" entry (file "~/cloud/org/inbox.org")
 	   "* TODO %?\n%u")))
-  (setq org-agenda-skip-deadline-if-done t
-	org-agenda-skip-scheduled-if-done t
-	org-agenda-skip-timestamp-if-done t
-	org-agenda-start-on-weekday nil
-	org-reverse-note-order t
-	org-fast-tag-selection-single-key t)
-
-  (require 'cl-lib)
 
   (defun hgf/visit-inbox ()
     (interactive)
     (find-file (hgf/org-path "inbox.org")))
 
-  (defun hgf/org-agenda-calculate-efforts (limit)
-    "Sum the efforts of scheduled entries up to LIMIT in the agenda buffer."
-    (let (total)
-      (save-excursion
-	(while (< (point) limit)
-	  (when (member (org-get-at-bol 'type) '("scheduled" "past-scheduled"))
-	    (push (org-entry-get (org-get-at-bol 'org-hd-marker) "Effort") total))
-	  (forward-line)))
-      (org-duration-from-minutes
-       (cl-reduce #'+
-		  (mapcar #'org-duration-to-minutes
-			  (cl-remove-if-not 'identity total))))))
+  (org-babel-do-load-languages
+   'org-babel-load-languages
+   '((python . t)
+     (emacs-lisp . t)
+     (ipython . t)))
 
-  (defun hgf/org-agenda-insert-efforts ()
-    "Insert the efforts for each day inside the agenda buffer."
-    (save-excursion
-      (let (pos)
-	(while (setq pos (text-property-any
-			  (point) (point-max) 'org-agenda-date-header t))
-	  (goto-char pos)
-	  (end-of-line)
-	  (insert-and-inherit (concat " ("
-				      (hgf/org-agenda-calculate-efforts
-				       (next-single-property-change (point) 'day))
-				      ")"))
-	  (forward-line)))))
-
-  (add-hook 'org-agenda-finalize-hook 'hgf/org-agenda-insert-efforts)
-
-  (setf (alist-get 'agenda org-agenda-prefix-format)
-	"%-6e %-10c %?t ")
-	;; "%-8e %-16:(hgf/title-case-filename (buffer-name)) %?t ")
-  
-  (setf (alist-get 'todo org-agenda-prefix-format)
-	"%-8e %-16:(hgf/title-case-filename (buffer-name)) %?t ")
 
   (general-def
     "<f1>" 'org-capture-inbox
@@ -674,88 +612,64 @@ this section is inspired by Harry Schwartz, John Wiegley and others.
     "w" 'org-agenda-week-view
     "e" 'org-agenda-set-effort))
 
-#+end_src
 
-** GTD
-All about them tasks.
-
-#+begin_src emacs-lisp
-(setq org-refile-use-outline-path 'file
-      org-clock-into-drawer nil)
-(setq org-refile-targets '((org-agenda-files . (:maxlevel . 2))))
-(setq org-archive-location (hgf/org-path "archive.org::* %s"))
-#+end_src
-
-Alright, this function isn't exactly the cleanest possible thing in the world,
-but it's useful enough for me (for now).
-
-#+begin_src emacs-lisp
-(defun org-generate-report ()
-  (interactive)
-  (let ((header "|Task|Duration|"))
-    (insert (s-join "\n" (nconc `(,header) (org-element-map (org-element-parse-buffer) 'clock
-					     (lambda (clock)
-					       (let ((task (org-element-property :title (org-element-property :parent (org-element-property :parent clock))))
-						     (val  (org-element-property :duration clock)))
-						 (format "| %s | %s |" (car task) val)))))))))
-(general-def "C-c C-x C-r" 'org-generate-report)
-#+end_src
-
-
-** Babel
-Some settings for the code blocks.
-
-#+begin_src emacs-lisp
-(setq org-src-fontify-natively t
-      org-src-preserve-indentation nil
-      org-src-tab-acts-natively t
-      org-edit-src-content-indentation 0
-      org-src-window-setup 'current-window)
-#+end_src
-
-And defining some languages.
-
-#+begin_src emacs-lisp
-(use-package ob-ipython)
+(with-eval-after-load 'org-agenda
+  (setf (alist-get 'agenda org-agenda-prefix-format)
+	"%-6e %-10c %?t ")
+  (setf (alist-get 'todo org-agenda-prefix-format)
+	"%-8e %-16:(hgf/title-case-filename (buffer-name)) %?t "))
 #+end_src
 
 #+begin_src emacs-lisp
-(org-babel-do-load-languages
- 'org-babel-load-languages
- '((python . t)
-   (emacs-lisp . t)
-   (ipython . t)))
+(defun hgf/ts-make-from-iso8601 (line)
+  "Return a ts struct from an iso8601 string.
+
+The ts library doesn't contain this by default, but there's an open PR:
+https://github.com/alphapapa/ts.el/pull/15"
+  (thread-last line
+    (org-read-date nil nil)
+    (parse-iso8601-time-string)
+    (float-time)
+    (make-ts :unix)))
+
+
+(defun hgf/ts-days-diff (then &optional now)
+  "Return the difference in days between THEN and NOW.
+
+I was having trouble using ts-diff and ts-human-difference, for whatever reason.
+This function works well enough."
+  (let* ((now (or now (ts-now)))
+	 (then-doy (ts-doy then))
+	 (then-year (ts-year then))
+	 (now-doy (ts-doy now))
+	 (now-year (ts-year now)))
+    (- then-doy now-doy (* -365 (- then-year now-year)))))
+
+(defun hgf/org-agenda-insert-efforts ()
+  "Insert the efforts for each day inside the agenda buffer."
+  (save-excursion
+    (let (pos date diff line)
+      (while (setq pos (text-property-any
+			(point) (point-max) 'org-agenda-date-header t))
+	(goto-char pos)
+	;; Line formats can be:
+	;; Tuesday 16 February 2021
+	;; Tuesday 16 February 2021 W07
+	;; Parsing works best if we only keep the day, month and year
+	;; hence the thread below
+	(setq diff (->> (thing-at-point 'line t)
+			(s-split-words)
+			(cdr)
+			(-take 3)
+			(s-join " ")
+			(hgf/ts-make-from-iso8601)
+			(hgf/ts-days-diff)))
+	(end-of-line)
+	(insert-and-inherit (concat " (" (hgf/org-ql-effort-on diff)  ")"))
+	(forward-line)))))
+(add-hook 'org-agenda-finalize-hook 'hgf/org-agenda-insert-efforts)
 #+end_src
 
-** Cosmetics
-I prefer my org-files non-indented. I also like to see the leading stars
-(otherwise there's a weird gap when things aren't indented).
-
-#+begin_src emacs-lisp
-(setq org-adapt-indentation nil
-      org-hide-leading-stars t
-      org-cycle-separator-lines 0
-      org-hide-emphasis-markers t
-      org-fontify-done-headline nil
-      org-startup-folded t)
-#+end_src
-
-I also prefer hiding the begin and end line of source blocks. I also
-find TODO keywords a tad annoying. Even though this hides these
-keywords throughout the files, I never actually write TODO or DONE in
-all-caps in normal text. Should I?
-
-#+begin_src emacs-lisp
-(add-hook
- 'org-mode-hook
- (lambda ()
-   "Beautify Org Symbols"
-   (push '("#+begin_src" . "λ") prettify-symbols-alist)
-   (push '("#+end_src" . "~") prettify-symbols-alist)
-   (push '(":PROPERTIES:" . "π") prettify-symbols-alist)
-   (push '(":END:" . "~") prettify-symbols-alist)
-   (prettify-symbols-mode)))
-#+end_src
 
 ** Face modifications
 Some things aren't meant to be. Like variable sized fonts in my org files.
@@ -775,15 +689,7 @@ Some things aren't meant to be. Like variable sized fonts in my org files.
 (add-hook 'org-mode-hook 'hgf/org-mode-hook)
 #+end_src
 
-** Editing
-I often start new headings in the middle of editing a paragraph and I've never
-wanted to carry over the text after the point.
-
-#+begin_src emacs-lisp
-(setq org-M-RET-may-split-line nil
-      org-outline-path-complete-in-steps nil)
-#+end_src
-
+** Cliplink
 Quickly adding a link with the title from said link. Nifty.
 
 #+begin_src emacs-lisp
@@ -793,14 +699,8 @@ Quickly adding a link with the title from said link. Nifty.
   (general-def org-mode-map "C-x C-l" 'org-cliplink))
 #+end_src
 
-** References and citations
 
-#+begin_src emacs-lisp
-(setq reftex-default-bibliography '("~/media/bibliographies/all.bib"))
-(setq bibtex-completion-bibliography '("~/media/bibliographies/all.bib"))
-#+end_src
-
-** Ox and Latex
+** Oxen
 I use org to write many of my latex files, including longer documents.
 
 #+begin_src emacs-lisp
@@ -831,69 +731,63 @@ I use org to write many of my latex files, including longer documents.
   (ox-extras-activate '(ignore-headlines)))
 #+end_src
 
-* Programming
-
-** Flycheck
+** Org ql
+Org ql is amazing. Combined with =org-super-agenda=, it's even better.
 
 #+begin_src emacs-lisp
-(use-package flycheck)
+(use-package org-ql
+  :config
+  (general-unbind org-ql-view-map "C-x C-s"))
+(use-package org-super-agenda
+  :config
+  (setq org-super-agenda-header-map nil))
+(use-package ts)
+#+end_src
+*** Queries
+#+begin_src emacs-lisp
+(defun hgf/org-ql-effort-on (&optional date type)
+  "Return the amount of estimated effort on a date.
+
+If DATE is nil, 'today' is used.
+TYPE may be 'scheduled' or 'closed'. If nil, it is set to 'total'."
+  (let ((date (or date 'today))
+	(type (or type 'scheduled)))
+    (thread-last (org-ql-query
+		   :from (org-agenda-files)
+		   :where `(and (,type :on ,date) (property "EFFORT"))
+		   :select '(org-entry-get (org-get-at-bol) "EFFORT"))
+      (-map #'org-duration-to-minutes)
+      (-reduce #'+)
+      (org-duration-from-minutes))))
+
 #+end_src
 
-** LSP Mode
-
+*** Bag o' goodies
 #+begin_src emacs-lisp
-(use-package lsp-mode
-  :init
-  (setq lsp-keymap-prefix "C-c l")
-  :hook
-  (rust-mode . lsp)
-  :commands lsp
-  :custom
-  (lsp-rust-analyzer-cargo-watch-command "clippy")
-  (lsp-eldoc-render-all t)
-  (lsp-idle-delay 0.6)
-  :config
-  (add-hook 'lsp-mode-hook 'lsp-ui-mode))
-
-(use-package lsp-ui
-  :commands lsp-ui-mode
-  :custom
-  (lsp-ui-peek-always-show t)
-  (lsp-ui-sideline-show-hover t)
-  (lsp-ui-doc-enable nil))
+(defun hgf/org-super-group-append-efforts-to-item (it)
+  (let* ((name (plist-get it :name))
+	 (date (cadr (text-properties-at 0 name))))
+    (plist-put it :name 
+	       (s-concat name " [" (hgf/org-ql-effort-on date) "]"))))
 #+end_src
 
-** Python
-I use Python /a lot/.
-
+*** Views
 #+begin_src emacs-lisp
-(use-package python
-  :ensure nil
-  :config
-  (setq python-indent-guess-indent-offset-verbose nil))
-#+end_src
-
-
-** Rust
-Rust configuration is largely stolen from [[https://robert.kra.hn/posts/2021-02-07_rust-with-emacs][Robert Krahn]]
-
-#+begin_src emacs-lisp
-(use-package rustic
-  :mode ("\\.rs\\'" . rustic-mode)
-  :general (rustic-mode-map
-	    "M-j" 'lsp-ui-imenu)
-  :config
-  (setq rustic-format-on-save t)
-  (add-hook 'rustic-mode-hook 'hgf/rustic-mode-hook))
-
-(defun hgf/rustic-mode-hook ()
-  (setq-local buffer-save-without-query t))
+(defun hgf/org-super-weekly-agenda ()
+  (interactive)
+  (org-ql-search
+    (org-agenda-files)
+    '(scheduled :from today :to 7)
+    :sort '(date priority todo)
+    :super-groups '((:auto-ts t :transformer hgf/org-super-group-append-efforts-to-item))))
 #+end_src
 
 * Writing
 ** TeX
 
 #+begin_src emacs-lisp
+(require 'reftex-parse)
+(require 'bibtex)
 (use-package tex
   :ensure auctex
   :mode ("\\.tex\\'" . tex-mode)
@@ -913,6 +807,20 @@ Rust configuration is largely stolen from [[https://robert.kra.hn/posts/2021-02-
   :config
   (auctex-latexmk-setup)
   (setq auctex-latexmk-inherit-TeX-PDF-mode t))
+
+(defun hgf/bibtex-complete ()
+  (interactive)
+  (let ((bib-files (reftex-locate-bibliography-files "."))
+	entries)
+    (dolist (file bib-files)
+      (message "Completing: %s" file)
+      (with-temp-buffer
+	(insert-file-contents file)
+	(bibtex-mode)
+	(setq entries (-concat (bibtex-parse-keys nil t) entries))))
+    (insert (completing-read "cite: " (-map #'car entries)))))
+      
+(general-def "C-c [" 'hgf/bibtex-complete)
 
 (defun hgf/bibtex-hook ()
   "My bibtex hook."
@@ -951,8 +859,7 @@ Trackin' them finances.
 #+end_src
 
 
-* Utilities
-** Vterm
+* Vterm
 Vterm is the nicest terminal emulator for Emacs I've found so far. But it needs
 module support, which requires building emacs with =--with-modules=.
 
@@ -1112,14 +1019,6 @@ I like Magit's repolist feature, but I prefer to build the repolist dynamically.
 #+end_src
 
 #+begin_src emacs-lisp
-(defun project-select-project ()
-  "Select a project from the project list."
-  (interactive)
-  (ivy-read
-   "Project: "
-   (project--build-project-list)
-   :action (lambda (p) (dired p))))
-
 (defun project--build-project-list ()
   "Create a list of all git repos."
   (hgf/find-git-repos-recursive "~/dev"))
@@ -1164,9 +1063,7 @@ I like Magit's repolist feature, but I prefer to build the repolist dynamically.
     "C-h k" 'helpful-key
     "C-h F" 'helpful-function
     "C-h C" 'helpful-command
-    "C-c C-d" 'helpful-at-point)
-  (setq counsel-describe-function-function 'helpful-callable
-	counsel-describe-variable-function 'helpful-variable))
+    "C-c C-d" 'helpful-at-point))
 #+end_src
 
 * Hydra
@@ -1194,7 +1091,6 @@ stuff that I seldom need to use.
     ("v" evil-window-vsplit "vsplit")
     ("q" evil-quit "quit")
     ("f" find-file "file")
-    ("b" ivy-switch-buffer "buffer")
     ("m" kill-this-buffer "murder")
     ("1" delete-other-windows "highlander")
     ("." nil "stop"))
@@ -1204,7 +1100,6 @@ stuff that I seldom need to use.
     ("c" (hydra-configs/body) "configs")
     ("e" (find-file (hgf/emacs-path "configuration.org")) "config")
     ;; Org
-    ("o" (find-file (counsel-find-file (hgf/org-path ""))) "org")
     ("b" (find-file (hgf/journal-path "blog.org")) "blog")
     ("d" (find-file (hgf/journal-path "diet/diet.ledger")) "diet")
     ("D" (find-file (hgf/journal-path "diet/food.ledger")) "food")
@@ -1229,8 +1124,7 @@ stuff that I seldom need to use.
   (defhydra hydra-work (:exit t)
     "Work related files"
     ("n" (find-file (hgf/journal-path "fraunhofer/notes.org")) "notes")
-    ("t" (find-file (hgf/journal-path "fraunhofer/working_hours.ledger")) "working hours")
-    ("p" (counsel-find-file (hgf/journal-path "fraunhofer/projects")) "projects"))
+    ("t" (find-file (hgf/journal-path "fraunhofer/working_hours.ledger")) "working hours"))
   (defhydra hydra-package (:exit t)
     "Package management"
     ("r" (package-refresh-contents) "refresh")
@@ -1332,7 +1226,7 @@ Editing PDFs has never been easier.
 (defun hgf/make-scratch-directory ()
   "Create a temporary scratch directory."
   (interactive)
-  (counsel-find-file (make-temp-file "scratch-" t)))
+  (find-file (make-temp-file "scratch-" t)))
 
 (defun hgf/make-scratch-buffer ()
   "Create and switch to a temporary scratch buffer with a random
